[gd_scene load_steps=3 format=3 uid="uid://b6eoph2qpu0d"]

[ext_resource type="Script" path="res://Scripts/UI/settings_menu.gd" id="1_88deh"]
[ext_resource type="PackedScene" path="res://Scenes/UI/VolumeSlider.tscn" id="2_brx2j"]

[node name="SettingsMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_88deh")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Settings"
horizontal_alignment = 1

[node name="ToggleBattleDefault" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Use battle as default"

[node name="ToggleAutoStart" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Auto start"

[node name="ToggleDefaultAIPlayers" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Players start as AI"

[node name="ToggleStreamerMode" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Streamer mode"

[node name="ToggleFullscreen" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Fullscreen"

[node name="ToggleBackgroundColorFollowsPlayers" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Background color changes with player's turns"

[node name="ToggleBMFastIntegrityChecks" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Check LibSpear integrity"

[node name="CycleGuiAnimationMode" type="Button" parent="Margin/VBox"]
layout_mode = 2
text = "GUI anim mode: something"
alignment = 0
text_overrun_behavior = 3

[node name="VolumeContainer" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/VBox/VolumeContainer"]
layout_mode = 2
text = "Volume"

[node name="Sliders" type="HBoxContainer" parent="Margin/VBox/VolumeContainer"]
layout_mode = 2

[node name="Master" parent="Margin/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "Master"

[node name="Music" parent="Margin/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "Music"

[node name="Game FX" parent="Margin/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "Game FX"

[node name="GUI" parent="Margin/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "GUI"

[connection signal="pressed" from="Margin/VBox/CycleGuiAnimationMode" to="." method="_on_cycle_gui_anim_mode_pressed"]
